<resources>
    <item name="is_scale_size_tag" type="id" />
    <item name="is_scale_font_tag" type="id" />

    <string name="app_name">MyLaShouDemo</string>
    <string name="action_settings">Settings</string>
    <string name="tab1">首页</string>
    <string name="tab2">周边</string>
    <string name="tab3">我的</string>
    <string name="tab4">更多</string>
    <string name="search_edittext_hint">请输入商品名、品类或商圈...</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_ready">松开加载更多</string>
    <string name="xlistview_footer_hint_loading">努力加载中...</string>
    <string name="xlistview_footer_hint_error">网络不给力，请重试！</string>
    <string name="all_movie">全部电影</string>
    <string name="hot_movie">热映电影</string>
    <string name="guess_you_like">猜你喜欢</string>
    <string name="all_tua_gou">查看全部团购</string>
    <string name="more_wifi">仅wifi下显示图片</string>
    <string name="more_remind">消息提醒</string>
    <string name="more_clean">清楚缓存</string>
    <string name="more_hao_ping">赏个好评</string>
    <string name="more_yijian">意见反馈</string>
    <string name="more_kefu">联系客服</string>
    <string name="more_about">关于</string>
    <string name="more_check">检查更新</string>
    <string name="no_login">您还没有登录哦</string>
    <string name="check_login">点击登录</string>
    <string name="text_lashouquan">拉手券</string>
    <string name="text_shoucang">收藏</string>
    <string name="text_liulan">最近浏览</string>
    <string name="my_order">我的订单</string>
    <string name="wait_pay">待付款</string>
    <string name="pay">已付款</string>
    <string name="wait_pingjia">待评价</string>
    <string name="my_momey">我的资产</string>
    <string name="yue_tixian">余额提现</string>
    <string name="text_diyongquan">抵用券</string>
    <string name="every_tuijian">每日推荐</string>
    <string name="my_pingji">我的评价</string>
    <string name="my_qiang">我的抽奖</string>
    <string name="all_goods">全部分类</string>
    <string name="paixu">智能排序</string>
    <string name="shaixuan">筛选</string>
    <string name="compete">完成</string>
    <string name="text_loading">努力加载中...</string>
    <string name="text_no_net">网络异常</string>
    <string name="hot_play">正在热映</string>
    <string name="quick_play">即将上映</string>
    <string name="select_zuo">影院选座</string>
    <string name="movie_tuan_gou">影票团购</string>
    <string name="tv_login">登录</string>
    <string name="tel_phone">输入手机号</string>
    <string name="quick_yanzhengma">输入验证码</string>
    <string name="tv_pwd">密码</string>
    <string name="tv_details">使用合作网站账号登录</string>
    <string name="movie">电影</string>
</resources>
