<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130px"
        android:background="@color/white"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/all_fenlei"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_all_fenlei"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_goods"
                android:textColor="@color/more_more_hui"
                android:textSize="42px"/>

            <ImageView
                android:id="@+id/img_fenlei"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10px"
                android:src="@drawable/iv_filter"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingBottom="30px"
            android:paddingTop="30px">
            <View android:layout_width="1px"
                  android:layout_height="match_parent"
                  android:background="@color/dan_hui"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/paixu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_paixu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paixu"
                android:textColor="@color/more_more_hui"
                android:textSize="42px"/>

            <ImageView
                android:id="@+id/img_paixu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10px"
                android:src="@drawable/iv_filter"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingBottom="30px"
            android:paddingTop="30px">
            <View android:layout_width="1px"
                  android:layout_height="match_parent"
                  android:background="@color/dan_hui"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/select"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shaixuan"
                android:textColor="@color/more_more_hui"
                android:textSize="42px"/>

            <ImageView
                android:id="@+id/img_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10px"
                android:src="@drawable/iv_filter"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>